--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-   "type": "module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.js",
@@ -12,8 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "inngest": "^3.44.3",
     "mongoose": "^8.19.1"
   },
   "devDependencies": {
